# penny

./: CMakeLists.txt  fake6502.ans  fake6850.c  main.c  penny.h
